# opppo-flat-figure

./: .gitignore  CMakeLists.txt  README.md  geometrys.h  list.h  main.cpp
lib/: CMakeLists.txt  geometrys.cpp  geometrys.h  list.cpp  list.h  mainprocess.cpp  mainprocess.h
src/: CMakeLists.txt  geometrys.cpp  geometrys.h  list.cpp  list.h  main.cpp  main.h
tests/: CMakeLists.txt  main_test.cpp
